[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
serde = "1.0.126"
config = { version = "0.11.0", deafult-features = false, features = ["yaml"] }
uuid = { version  = "0.8.1", features = ["v4"]}
chrono = "0.4.15"
env_logger = "0.8.4"
log = "0.4.14"
tracing = { version = "0.1", features = ["log"] }
 
[dependencies.sqlx]
version = "0.5.5"
deafult-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11"
tokio = "1"
